--- a/style.css
+++ b/style.css
@@ -1040,3 +1040,13 @@ h4 {
         text-align: center;
     }
 }
+
+.citation
+{
+   font-size: 1.1em; 
+}
+.réalisations
+{
+   font-size: 1.2em;
+   font-weight: bold; 
+}
