--- a/style.css
+++ b/style.css
@@ -60,15 +60,6 @@ a:hover {
     padding: 20px 50px;
 }
 
-.bg-center,
-.bg-l-edge,
-.bg-r-edge,
-.bg-t-edge,
-.bg-b-edge,
-.bg-tl-edge,
-.bg-bl-edge,
-.bg-tr-edge,
-.bg-br-edge,
 .bg-repeat {
     -webkit-background-size: auto!important;
     -moz-background-size: auto!important;
@@ -111,10 +102,6 @@ a:hover {
     color: rgba(255, 255, 255, .9);
 }
 
-.d-bloc .icon-round,
-.d-bloc .icon-square,
-.d-bloc .icon-rounded,
-.d-bloc .icon-semi-rounded-a,
 .d-bloc .icon-semi-rounded-b {
     border-color: rgba(255, 255, 255, .9);
 }
@@ -123,36 +110,10 @@ a:hover {
     border-color: rgba(255, 255, 255, .2);
 }
 
-.d-bloc .a-btn,
-.d-bloc .navbar a,
-.d-bloc .navbar-brand,
-.d-bloc a .icon-sm,
-.d-bloc a .icon-md,
-.d-bloc a .icon-lg,
-.d-bloc a .icon-xl,
-.d-bloc h1 a,
-.d-bloc h2 a,
-.d-bloc h3 a,
-.d-bloc h4 a,
-.d-bloc h5 a,
-.d-bloc h6 a,
 .d-bloc p a {
     color: rgba(255, 255, 255, .6);
 }
 
-.d-bloc .a-btn:hover,
-.d-bloc .navbar a:hover,
-.d-bloc .navbar-brand:hover,
-.d-bloc a:hover .icon-sm,
-.d-bloc a:hover .icon-md,
-.d-bloc a:hover .icon-lg,
-.d-bloc a:hover .icon-xl,
-.d-bloc h1 a:hover,
-.d-bloc h2 a:hover,
-.d-bloc h3 a:hover,
-.d-bloc h4 a:hover,
-.d-bloc h5 a:hover,
-.d-bloc h6 a:hover,
 .d-bloc p a:hover {
     color: rgba(255, 255, 255, 1);
 }
@@ -207,10 +168,6 @@ a:hover {
     color: rgba(0, 0, 0, .7);
 }
 
-.l-bloc .icon-round,
-.l-bloc .icon-square,
-.l-bloc .icon-rounded,
-.l-bloc .icon-semi-rounded-a,
 .l-bloc .icon-semi-rounded-b {
     border-color: rgba(0, 0, 0, .7);
 }
@@ -220,38 +177,10 @@ a:hover {
     border-color: rgba(0, 0, 0, .1);
 }
 
-.d-bloc .panel .a-btn,
-.l-bloc .a-btn,
-.l-bloc .navbar a,
-.l-bloc .navbar-brand,
-.l-bloc a .icon-sm,
-.l-bloc a .icon-md,
-.l-bloc a .icon-lg,
-.l-bloc a .icon-xl,
-.l-bloc h1 a,
-.l-bloc h2 a,
-.l-bloc h3 a,
-.l-bloc h4 a,
-.l-bloc h5 a,
-.l-bloc h6 a,
 .l-bloc p a {
     color: rgba(0, 0, 0, .6);
 }
 
-.d-bloc .panel .a-btn:hover,
-.l-bloc .a-btn:hover,
-.l-bloc .navbar a:hover,
-.l-bloc .navbar-brand:hover,
-.l-bloc a:hover .icon-sm,
-.l-bloc a:hover .icon-md,
-.l-bloc a:hover .icon-lg,
-.l-bloc a:hover .icon-xl,
-.l-bloc h1 a:hover,
-.l-bloc h2 a:hover,
-.l-bloc h3 a:hover,
-.l-bloc h4 a:hover,
-.l-bloc h5 a:hover,
-.l-bloc h6 a:hover,
 .l-bloc p a:hover {
     color: rgba(0, 0, 0, 1);
 }
@@ -260,9 +189,6 @@ a:hover {
     color: rgba(0, 0, 0, .6);
 }
 
-.d-bloc .panel .btn-wire,
-.d-bloc .panel .btn-wire:hover,
-.l-bloc .btn-wire,
 .l-bloc .btn-wire:hover {
     color: rgba(0, 0, 0, .7);
     border-color: rgba(0, 0, 0, .3);
@@ -281,7 +207,6 @@ a:hover {
     margin-left: 0;
 }
 
-.row.row-no-gutters > [class^="col-"],
 .row.row-no-gutters > [class*=" col-"] {
     padding-right: 0;
     padding-left: 0;
@@ -336,7 +261,6 @@ a:hover {
     text-align: inherit;
 }
 
-.nav > li a:hover,
 .nav > li a:focus {
     background: transparent;
 }
@@ -359,7 +283,6 @@ a:hover {
     float: left;
 }
 
-.nav-invert .navbar-header,
 .nav-invert .navbar-brand {
     float: right;
     position: relative;
@@ -374,7 +297,6 @@ a:hover {
         transform: translate(0, -50%);
         -webkit-transform: translateY(-50%);
     }
-    .nav > li .dropdown-menu a,
     .nav > li .dropdown-menu a:hover {
         color: #484848;
     }
@@ -388,8 +310,6 @@ a:hover {
     .nav-center .navbar-header {
         width: 100%;
     }
-    .nav-center .navbar-header,
-    .nav-center .navbar-brand,
     .nav-center .nav > li {
         float: none;
         display: inline-block;
@@ -457,8 +377,6 @@ nav .caret {
     margin: 0 0 5px 5px;
 }
 
-.btn-d,
-.btn-d:hover,
 .btn-d:focus {
     color: #FFF;
     background: rgba(0, 0, 0, .3);
@@ -481,6 +399,7 @@ button {
 
 .icon-md {
     font-size: 30px!important;
+    color: white;
 }
 
 .icon-lg {
@@ -491,8 +410,6 @@ button {
     text-shadow: 0 1px 2px rgba(0, 0, 0, .3);
 }
 
-.panel-sq,
-.panel-sq .panel-heading,
 .panel-sq .panel-footer {
     border-radius: 0;
 }
@@ -604,14 +521,11 @@ a[data-lightbox]:hover img {
     opacity: 0.3;
 }
 
-.close-lightbox:hover,
-.next-lightbox:hover,
 .prev-lightbox:hover {
     opacity: 1.0;
     color: #FFF;
 }
 
-.next-lightbox,
 .prev-lightbox {
     font-size: 20px;
     color: rgba(255, 255, 255, .9);
@@ -643,13 +557,6 @@ a[data-lightbox]:hover img {
     background: none;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
 label,
 .btn,
 a {
@@ -685,6 +592,8 @@ p {
 }
 
 .tight-width-whitespace {
+    display: inline;
+    justify-content: space-between;
     max-width: 600px;
     margin: auto auto auto auto;
 }
@@ -743,8 +652,19 @@ h4 {
     color: #FFFFFF!important;
 }
 
+.img-responsive
+{
+    max-width: 400px;
+    height: auto;
+}
+.img-ligne2
+{
+    min-width: 400px;
+    height: auto;
+}
 .portfolio-thumb {
     margin-bottom: 24px;
+    margin-right: 24px;
 }
 
 .portfolio-row {
@@ -757,8 +677,17 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgba(9, 68, 157, 0.7);
     padding: 40px 40px 40px 40px;
+    width: auto;
+    height: 300px;
+
+}
+.bloc2
+{
+    max-width: 600px;
+    height: 600px;
+    margin: auto auto auto auto;
 }
 
 .bold-link {
@@ -777,7 +706,12 @@ h4 {
 .bgc-atomic-tangerine {
     background-color: #a94d23;
 }
-
+.mg-md.text-center.tc-white2
+{
+    font-weight:700;
+    color: white;
+    background-color:#a94d23;
+}
 .tc-white {
     color: #FFFFFF!important;
 }
@@ -822,7 +756,7 @@ h4 {
 }
 
 .bg-banniere {
-    background-image: url("img/agence-la-panthere1.webp");
+    background-image: url("img/Fond-bas-de-page.webp");
 }
 
 .bg-presentation {
@@ -834,9 +768,6 @@ h4 {
         padding-left: 20px;
         padding-right: 20px;
     }
-    .bloc.full-width-bloc,
-    .bloc-tile-2.full-width-bloc .container,
-    .bloc-tile-3.full-width-bloc .container,
     .bloc-tile-4.full-width-bloc .container {
         padding-left: 0;
         padding-right: 0;
@@ -871,7 +802,6 @@ h4 {
     .b-parallax {
         background-attachment: scroll;
     }
-    .page-container,
     #hero-bloc {
         overflow-x: hidden;
         position: relative;
@@ -880,12 +810,10 @@ h4 {
         padding-left: constant(safe-area-inset-left);
         padding-right: constant(safe-area-inset-right);
     }
-    .bloc-group,
     .bloc-group .bloc {
         display: block;
         width: 100%;
     }
-    .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
         padding-left: constant(safe-area-inset-left);
@@ -898,13 +826,6 @@ h4 {
         overflow-x: hidden;
         position: relative;
     }
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    p,
     #disqus_thread {
         padding-left: 10px!important;
         padding-right: 10px!important;
@@ -981,20 +902,13 @@ h4 {
         padding-left: 0;
         padding-right: 0;
     }
-    .bloc-xxl,
-    .bloc-xl,
     .bloc-lg {
         padding: 40px 0;
     }
-    .bloc-sm,
     .bloc-md {
         padding-left: 0;
         padding-right: 0;
     }
-    .bloc-tile-2 .container,
-    .bloc-tile-3 .container,
-    .bloc-tile-4 .container,
-    .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding-left: 0;
         padding-right: 0;
@@ -1047,10 +961,19 @@ h4 {
 
 .citation
 {
-   font-size: 1.1em; 
+   font-size: 1.4em; 
 }
 .réalisations
 {
-   font-size: 1.2em;
+   font-size: 1.5em;
    font-weight: bold; 
 }
+.description_agence
+{
+    font-size: 1.6em;
+}
+.text-center
+{
+    font-size: 1.3em;
+}
+
